--- a/public/index.html
+++ b/public/index.html
@@ -8,6 +8,8 @@
    
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
    
+    <!-- FontAwesome 5 kit -->
+    <script src="https://kit.fontawesome.com/85acf21687.js"></script>
     <!-- Bootstrap css -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
 
