change brand name font

--- a/public/index.html
+++ b/public/index.html
@@ -8,6 +8,8 @@
    
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
    
+    <!--Merriweather Font-->
+    <link href="https://fonts.googleapis.com/css?family=Merriweather&display=swap" rel="stylesheet">
     <!-- FontAwesome 5 kit -->
     <script src="https://kit.fontawesome.com/85acf21687.js"></script>
     <!-- Bootstrap css -->
